# ESP-DRO

./: .gitignore  CMakeLists.txt  CommandDocument.txt  LICENSE  README.md  project.yml  sdkconfig  sdkconfig.old
3D Prints/: Display Frame Back.stl  Display Frame Face.stl  ESP_DRO_DISPLAY_ENCLOSURE.f3d  Screen Mount Hook.stl  Screen Mount Pin.stl  Screen Mount.stl
Backups/: 20250519_main.7z
main/: CMakeLists.txt  config.h  idf_component.yml  main.cpp
main/core/: app_display.cpp  app_display.h  dro_axis.cpp  dro_axis.h  preferences_wrapper.cpp  preferences_wrapper.h  tool.h  tool_manager.cpp  tool_manager.h
main/core/reference/: esp32-8048S070C.json
main/include/: lv_conf.h
main/platform/: hardware_abstraction.cpp  hardware_abstraction.h  interrupts.cpp  interrupts.h
main/ui/: ui_manager.cpp  ui_manager.h
main/ui/fonts/: lv_font_7seg_64.c
main/ui/lv_helpers/: LVButton.h  LVCheckbox.h  LVColor.h  LVContainer.h  LVDropdown.h  LVFlexContainer.h  LVHelpers.h  LVKeyboard.h  LVKeyboardNumeric.h  LVLabel.h  LVObjectBase.h  LVPanel.h  LVSwitch.h  LVTextarea.h
main/ui/popups/: numericInputPopup.cpp  numericInputPopup.h  settingsPopup.cpp  settingsPopup.h  toolEditPopup.cpp  toolEditPopup.h
main/ui/screens/: debugScreen.h  mainScreen.h
main/ui/settings/: settingsMenu.cpp  settingsMenu.h
